    message, <player> has been in the conquered zone
  - ONLINE_PLAYER <player> [<ping [<team>]]: At the beginning of the round,
    <player> had <ping> and was on <team>. This line is not printed for bots
  - NUM_HUMANS <n>: There are <n> players that are not AIs and are part of a
    team.
  - ROUND_SCORE has the player's team's score appended.

  Bugfixes:
- Text input fields now let the text wrap correctly and make use of the space allocated
  for them in a not-completely-dumb way. And *sigh* depending on the text field, color
  codes are either ignored (for the usernames) or both displayed in text and rendered.
- "KICK 2pack" no longer kicks user 2 instead of player 2pack.
- Fixed various trail end related extrapolation/simulation inaccuracies that looked
  like lag.
- When extrapolating, the game's sensors never detected own or teammates' walls,
  it mistook them for enemy walls.
- The acceleration and boost system always used settings for enemy walls instead of
  settings for team players' walls. That means that old clients connecting to a
  0.2.8.3+ server that has CYCLE_ACCEL_ENEMY and CYCLE_ACCEL_TEAM set to different
  values experience syncing problems. The default behavior therefore is to lock 0.2.8.2
  and earlier out of your server if you set one of them away from the default. 
  If you want to set both accelerations away from the default, but to the same value,
  there won't be a compatibility problem; in that case, set CYCLE_ACCEL_ENEMY_OVERRIDE
  and CYCLE_ACCEL_TEAM_OVERRIDE to 0 and old clients will be allowed in. However, you
  should manually lock out players with 0.2.7 clients, for example by modifying
  CYCLE_ACCEL_RIM a tiny bit.
- "Team Red" bug. If the server allows maximally two teams, no team ever
  gets to be Team Red.
- Phasing made even more difficult; nice side effect of the fix is
  reduced network bandwidth usage.
- Speed gauge resets between rounds.
- More accurate Lag-O-Meter by meriton.
- Zones were sometimes invisible.
